--- a/resources/view/pages/premiumfeatures.html.twig
+++ b/resources/view/pages/premiumfeatures.html.twig
@@ -11,8 +11,8 @@
 				<center>
 					<a href="{{URL}}/payment" style="padding:0px;margin:0px;">
 						<div class="BigButton" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_green.gif)">
-							<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);">
-								<div class="BigButtonOver" style="background-image: url(&quot;{{IMAGE_PATH}}/global/buttons/button_green_over.gif&quot;); visibility: hidden;"></div><input class="BigButtonText" type="submit" value="Get Premium"></div>
+							<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image: url(&quot;{{IMAGE_PATH}}/global/buttons/button_green_over.gif&quot;); visibility: hidden;"></div>
+								<input class="BigButtonText" type="submit" value="Get Premium"></div>
 						</div>
 					</a>
 				</center>
@@ -653,8 +653,8 @@
 				</div><br><center>
 					<a href="{{URL}}/payment" style="padding:0px;margin:0px;">
 						<div class="BigButton" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_green.gif)">
-							<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);">
-								<div class="BigButtonOver" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_green_over.gif);"></div><input class="BigButtonText" type="submit" value="Get Premium"></div>
+							<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_green_over.gif);"></div>
+							<input class="BigButtonText" type="submit" value="Get Premium"></div>
 						</div>
 					</a>
 				</center>
