--- a/resources/view/pages/support/team.html.twig
+++ b/resources/view/pages/support/team.html.twig
@@ -160,8 +160,8 @@
 																			</td>
 																			<td>
 																				<a href="{{URL}}/community/characters/{{ player.name }}" style="padding:0px;margin:0px;"><input type="hidden" name="name" value="Aigorim"><div class="BigButton" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_blue.gif)">
-																						<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);">
-																							<div class="BigButtonOver" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_blue_over.gif);"></div><input class="BigButtonText" type="submit" value="View"></div>
+																						<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_blue_over.gif);"></div>
+																						<input class="BigButtonText" type="submit" value="View"></div>
 																					</div>
 																				</a>
 																			</td>
