--- a/resources/styles/global.css
+++ b/resources/styles/global.css
@@ -378,3 +378,149 @@ a.BigButtonText, a.BigButtonText:link, a.BigButtonText:visited, a.BigButtonText:
   color: #ffd18c;
   text-decoration: none
 }
+
+.SubmitButtonRow {
+  position:relative;
+  margin-top:25px;
+  margin-bottom:25px;
+  display:flex;
+  flex-wrap:wrap;
+  align-items:center;
+  justify-content:flex-start
+ }
+ .SubmitButtonRow .LeftButton,
+ .SubmitButtonRow .CenterButton,
+ .SubmitButtonRow .RightButton {
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:5px;
+  text-align:center
+ }
+ .PWStrengthContainer {
+  position:relative;
+  clear:both
+ }
+ .PWStrengthIndicator {
+  text-align:center;
+  border:1px solid grey;
+  color:#fff;
+  width:211px;
+  font-size:10pt
+ }
+ .TextInputLine .PWStrengthIndicator {
+  width:242px
+ }
+ .PWStrengthLevel0,
+ .PWStrengthLevel1 {
+  background-color:#ec644b
+ }
+ .PWStrengthLevel2 {
+  background-color:#eb8005
+ }
+ .PWStrengthLevel3 {
+  background-color:#b0b300
+ }
+ .PWStrengthLevel4 {
+  background-color:#20a000
+ }
+ .PWStrengthToolTip {
+  display:none;
+  position:absolute;
+  width:410px;
+  top:-25px;
+  padding:0 8px 8px;
+  border:1px double #5a2800;
+  color:#5a2800;
+  font-size:8pt;
+  background-image:url({{IMAGE_PATH}}/global/content/scroll.gif);
+  z-index:1000;
+  left:250px
+ }
+ .TextInputLine .PWStrengthToolTip {
+  left:270px;
+  min-width:250px
+ }
+ .BoxInputText .PWStrengthToolTip {
+  background-image:none;
+  left:-272px;
+  width:250px;
+  margin-top:-33px;
+  padding:5px;
+  font-size:8pt;
+  color:#fff;
+  background-color:#da761e;
+  border:2px outset #fff;
+  filter:alpha(opacity=90);
+  opacity:.9;
+  -moz-opacity:.9;
+  -moz-border-radius:10px;
+  -webkit-border-radius:10px;
+  -khtml-border-radius:10px;
+  border-radius:10px;
+  -webkit-hyphens:auto;
+  -moz-hyphens:auto;
+  hyphens:auto;
+  z-index:1
+ }
+ .SmallPasswordForm .PWStrengthToolTip {
+  top:-65px
+ }
+ .PWStrengthToolTipHeadline {
+  font-weight:700;
+  margin-top:8px;
+  margin-bottom:5px
+ }
+ .BoxInputText .PWStrengthToolTipHeadline {
+  margin-top:0
+ }
+ .PWStrengthToolTip .HelperDivArrow {
+  background-image:url({{IMAGE_PATH}}/global/content/helper-div-arrow.png);
+  position:absolute;
+  top:7px;
+  left:-8px;
+  width:8px;
+  height:13px
+ }
+ .SmallPasswordForm .PWStrengthToolTip .HelperDivArrow {
+  top:45px
+ }
+ .BoxInputText .PWStrengthToolTip .HelperDivArrow {
+  display:none
+ }
+ .PWStrengthToolTip .InputIndicator {
+  position:absolute;
+  height:12px;
+  width:12px;
+  left:0;
+  top:2px;
+  float:left;
+  margin-right:5px;
+  background-repeat:no-repeat
+ }
+ .PWStrengthToolTip .PWRule {
+  position:relative;
+  padding-left:15px;
+  margin-bottom:4px
+ }
+ .PWStrengthToolTip .InputIndicatorOK {
+  background-image:url({{IMAGE_PATH}}/global/general/ok.gif)
+ }
+ .PWStrengthToolTip .InputIndicatorNotOK {
+  background-image:url({{IMAGE_PATH}}/global/general/nok.gif)
+ }
+ .PasswordInputLabel {
+  margin-top:0
+ }
+ .CharacterNameInputLabel {
+  margin-top:25px
+ }
+ @media screen\0,body {
+  #cookiedialogbox {
+   margin-left:-303px;
+   bottom:-81px
+  }
+  #cookiedetailsbox {
+   margin-left:-303px;
+   bottom:-81px
+  }
+ }
