--- a/resources/view/pages/base.html.twig
+++ b/resources/view/pages/base.html.twig
@@ -216,6 +216,30 @@ var FB_ForceReload = 0;
 								{% endfor %}
 							</ul>
 						</li>
+						<li class="Level1Block" id="wars">
+							<div class="Level1Entry" onclick="MenuItemAction('wars')" ;="">Wars</div>
+							<ul class="">
+								{% for menu in menu %}
+								{% if menu.category == 'wars' %}
+								<li class="Level2Block MobileNavigationLinkContainer" id="{{ menu.tag }}" style="display: none;">
+									<a class="Level2Entry" href="{{ URL }}/{{ menu.link }}">{{ menu.name }}</a>
+								</li>
+								{% endif %}
+								{% endfor %}
+							</ul>
+						</li>
+						<li class="Level1Block" id="support">
+							<div class="Level1Entry" onclick="MenuItemAction('support')" ;="">Support</div>
+							<ul class="">
+								{% for menu in menu %}
+								{% if menu.category == 'support' %}
+								<li class="Level2Block MobileNavigationLinkContainer" id="{{ menu.tag }}" style="display: none;">
+									<a class="Level2Entry" href="{{ URL }}/{{ menu.link }}">{{ menu.name }}</a>
+								</li>
+								{% endif %}
+								{% endfor %}
+							</ul>
+						</li>
 						{% if active_donates == 1 %}
 						<li class="Level1Block" id="shop">
 							<div class="Level1Entry" onclick="MenuItemAction('shop')" ;="">Shop</div>
@@ -238,7 +262,7 @@ var FB_ForceReload = 0;
 			<div class="main-menu">
 				<div id="MenuColumn">
 					<div id="LeftArtwork">
-						<a href=""><img id="TibiaLogoArtworkTop" src="{{IMAGE_PATH}}/global/header/tibia-logo-artwork-top.gif" alt="logoartwork"></a>
+						<a href="{{ URL }}/latestnews"><img id="TibiaLogoArtworkTop" src="{{IMAGE_PATH}}/global/header/tibia-logo-artwork-top.gif" alt="logoartwork"></a>
 						<img id="LogoLink" src="{{IMAGE_PATH}}/global/header/tibia-logo-artwork-string.gif" onclick="window.location = '';" alt="logoartwork">
 					</div>
 					<div class="SmallMenuBorder BorderTop" style="background-image:url({{IMAGE_PATH}}/global/general/box-top-large.png);"></div>
@@ -537,160 +561,12 @@ var FB_ForceReload = 0;
 					<div class="Bottom" style="background-image:url({{IMAGE_PATH}}/global/general/box-bottom.gif);"></div>
 				</div>
 				{% endif %}
-<style>
-#HighscoreBox {
-	height: 360px;
-}
-.HighscoresContent {
-	display: flex;
-	padding: 0px 7px 0px 7px;
-}
-.HighscoresLabel {
-	background-image: url({{IMAGE_PATH}}/global/themeboxes/highscores/highscores.png);
-	height: 32px;
-	width: 100%;
-}
-.HighscoresBg {
-	background-image: url({{IMAGE_PATH}}/global/themeboxes/highscores/bg.png);
-	background-repeat: repeat-y !important;
-	width: 166px;
-	height: 316px;
-	padding-top: 5px;
-}
-.rank {
-	position: relative;
-	display: flex;
-}
-.rank:hover {
-	background: rgb(0 0 0 / 25%);
-}
-.HighscoresOutfit {
-	width: 64px;
-	height: 64px;
-	position: relative;
-	left: -20px;
-	top: -60px;
-}
-.HighscoresImage {
-	height:45px;
-	width: 50px;
-}
-.HighscoresRibbon {
-	position: relative;
-	left: -5px;
-	top: 30px;
-	z-index: 1;
-}
-.HighscoresText {
-	display: grid;
-	width: 100px;
-	font-family: Tahoma, sans-serif;
-}
-.HighscoresOnline {
-	margin: 0px;
-	color: green;
-}
-.HighscoresOffline {
-	margin: 0px;
-	color: red;
-}
-.HighscoresHr {
-	display: block;
-    border: 0;
-	border-top: 1px solid #5e5e5e;
-	padding: 0;
-	margin: 5px;
-}
-.HighscoresLink {
-	font-family: sans-serif !important;
-    font-weight: normal !important;
-	font-size: 8pt !important;
-    color: #5A2800 !important;
-    text-decoration: none;
-    cursor: pointer;
-}
-.HighscoresLink:hover {
-	text-decoration: none !important;
-}
-.Themeboxes #SearchCharacterBox #SearchCharacterText {
-	font-family: Verdana,Arial,sans-serif;
-    font-weight: 700;
-    line-height: 11pt;
-    color: #5a2800;
-    position: absolute;
-    height: 70px;
-    width: 150px;
-    top: 37px;
-    left: 15px;
-    padding-top: 5px;
-    overflow: hidden;
-    text-align: center;
-}
-</style>
-			<div id="HighscoreBox" class="Themebox">
-				<div class="HighscoresLabel"></div>
-					<div class="HighscoresContent">
-						<div class="HighscoresBg">
-							{% for highscore in highscores %}
-							<a class="HighscoresLink" href="{{URL}}/community/characters/{{ highscore.name }}">
-							<div class="rank">
-								<div class="HighscoresImage">
-									<img class="HighscoresRibbon" src="{{ highscore.ribbon }}">
-									<img class="HighscoresOutfit" src="{{ highscore.outfit.image_url }}">
-								</div>
-								<div class="HighscoresText">
-									<p class="{% if highscore.online is not empty %}HighscoresOnline{% endif %}{% if highscore.online is empty %}HighscoresOffline{% endif %}">{{ highscore.name }}</p>
-									<small>Level: {{ highscore.level }}<br>{{ highscore.vocation }}</small>
-								</div>
-							</div>
-							</a>
-							<hr class="HighscoresHr">
-							{% endfor %}
-							<div class="ThemeboxButton">
-								<a href="{{URL}}/community/highscores" style="padding:0px;margin:0px;">
-									<div class="BigButton" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_blue.gif)">
-										<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{IMAGE_PATH}}/global/buttons/button_blue_over.gif);"></div>
-											<input class="BigButtonText" type="button" value="View Highscores">
-										</div>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="Bottom" style="background-image:url({{IMAGE_PATH}}/global/general/box-bottom.gif);"></div>
-				</div>
+				{% include "highscorebox.html.twig" %}
 				{% if active_donates == 1 %}
-				{# PremiumBox START #}
-				<div id="PremiumBox" class="Themebox" style="background-image:url({{IMAGE_PATH}}/global/themeboxes/premium/themebox.png);">
-					<div id="PremiumBoxDecor" style="background-image:url({{IMAGE_PATH}}/global/themeboxes/premium/crown_animation.gif);"></div>
-					<div id="PremiumBoxBg" style="background-image:url({{IMAGE_PATH}}/global/themeboxes/premium/coins_premium.png);"></div>
-					<div id="PremiumBoxOverlay" style="background-image:url({{IMAGE_PATH}}/global/themeboxes/premium/type_overlay.png);">
-						<p id="PremiumBoxOverlayText">Donate here!</p>
-					</div>
-					<div id="PremiumBoxButton">
-						<a href="{{URL}}/payment" style="padding:0px;margin:0px;">
-							<div class="WebshopButton" style="background-image:url({{IMAGE_PATH}}/global/themeboxes/premium/button.png)">
-								<div onmouseover="MouseOverWebshopButton(this);" onmouseout="MouseOutWebshopButton(this);"><div class="WebshopButtonOver" style="background-image: url({{IMAGE_PATH}}/global/themeboxes/premium/button_hover.png); visibility: hidden;"></div>
-									<input class="WebshopButtonText" type="image" name="Get Coins" alt="Get Coins" src="{{IMAGE_PATH}}/global/themeboxes/premium/get_premium.png">
-								</div>
-							</div>
-						</a>
-					</div>
-					<div id="PremiumBoxButtonDecor" style="background-image:url({{IMAGE_PATH}}/global/themeboxes/premium/button_premiumtime.png);"></div>
-				</div>
-				{# PremiumBox END #}
+					{% include "premiumbox.html.twig" %}
 				{% endif %}
 				{% if current_poll is not empty %}
-				<div id="CurrentPollBox" class="Themebox" style="background-image:url({{ IMAGE_PATH }}/global/themeboxes/current-poll/currentpollbox.gif);">
-					<div id="CurrentPollText">{{ current_poll.title }}</div>
-					<div class="ThemeboxButton">
-						<a href="{{ URL }}/community/polls/{{ current_poll.id }}/view" style="padding:0px;margin:0px;">
-							<div class="BigButton" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue.gif)"><div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue_over.gif);"></div>
-							<input class="BigButtonText" type="submit" value="Vote Now"></div></div>
-						</a>
-					</div>
-					<div class="Bottom" style="background-image:url({{ IMAGE_PATH }}/global/general/box-bottom.gif);"></div>
-				</div>
+					{% include "pollbox.html.twig" %}
 				{% endif %}
 			</div>
 			{# Themeboxes END #}
@@ -718,5 +594,6 @@ var FB_ForceReload = 0;
 				});
 			}
 			</script>
+			<div id="cookiedialogbackground"></div>
 	</body>
 </html>
