added net payments to donation module

--- a/resources/view/admin/modules/donates/view.html.twig
+++ b/resources/view/admin/modules/donates/view.html.twig
@@ -62,7 +62,7 @@
                                                 <tbody>
                                                     <tr>
                                                         <td class="pe-1">Total Price:</td>
-                                                        <td><span class="fw-bold">R$ {{ donate.final_price }}</span></td>
+                                                        <td><span class="fw-bold">R$ {{ donate.gross_payment }}</span></td>
                                                     </tr>
                                                     <tr>
                                                         <td class="pe-1">Total Coins:</td>
@@ -97,7 +97,7 @@
                                                     <span class="fw-bold">{{ donate.total_coins }}</span>
                                                 </td>
                                                 <td class="py-1">
-                                                    <span class="fw-bold">R$ {{ donate.final_price }}</span>
+                                                    <span class="fw-bold">R$ {{ donate.gross_payment }}</span>
                                                 </td>
                                             </tr>
                                         </tbody>
