--- a/resources/view/pages/shop/payment.html.twig
+++ b/resources/view/pages/shop/payment.html.twig
@@ -541,7 +541,7 @@ $('#ServiceID_Icon_Over_' + a_ServiceID).css('background-image', '');
 																											<input type="radio" id="ServiceID_{{ product.web_id }}" name="payment_coins" value="{{ product.coins }}" style="display: none;">{{ product.coins }} Coins
 																										</div>
 																									</div>
-																									<div class="ServiceIDPriceContainer"><span class="ServiceIDPrice" id="PD_{{ product.web_id }}">{{ product.final_price }}.00 BRL</span>*</div>
+																									<div class="ServiceIDPriceContainer"><span class="ServiceIDPrice" id="PD_{{ product.web_id }}">{{ product.gross_payment }}.00 BRL</span>*</div>
 																								</label>
 																							</div>
 																						</div>
